--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <section id="contact">
         <h2>Contact</h2>
-        <form action="mailto:your-email@example.com" method="post" enctype="text/plain">
+        <form action="mailto:yadirtydoug@gmail.com" method="post" enctype="text/plain">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
             <label for="email">Email:</label>
