--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Your Name. All rights reserved.</p>
+        <p>&copy; 2024 YADIRTYDOG. All rights reserved.</p>
     </footer>
 </body>
 </html>
