--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
     <section id="home" class="hero">
         <h1>YADIRTYDOG!</h1>
         <p>How the hell are ya?</p>
+        
+        <div class="button-container">
+            <a href="https://example.com/paperback" class="button">BUY "GOTHIC VIOLENCE" IN PAPERBACK</a>
+            <a href="https://example.com/audiobook" class="button">BUY "GOTHIC VIOLENCE" AS AN AUDIOBOOK</a>
+            <a href="https://example.com/first-book" class="button">PURCHASE THE FIRST MIKE MA BOOK</a>
+            <a href="https://example.com/old-design-portfolio" class="button">OLD DESIGN PORTFOLIO</a>
+            <a href="https://example.com/spotify-playlist" class="button">THE MIKE MA MEGA PLAYLIST ON SPOTIFY</a>
+            <a href="https://example.com/youtube" class="button">YOUTUBE ACCOUNT</a>
+        </div>
     </section>
 
     <section id="about">
@@ -40,14 +49,4 @@
             <input type="text" id="name" name="name" required>
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required>
-            <label for="message">Message:</label>
-            <textarea id="message" name="message" rows="4" required></textarea>
-            <button type="submit">Send</button>
-        </form>
-    </section>
-
-    <footer>
-        <p>&copy; 2024 YADIRTYDOG. All rights reserved.</p>
-    </footer>
-</body>
-</html>
+            <label for="message">Message:</la
