--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </section>
 
     <section id="projects">
-        <h2>Project</h2>
+        <h2>Projects</h2>
         <p>Showcase your projects or work here. Add descriptions, images, and links as needed.</p>
     </section>
 
