--- a/index.html
+++ b/index.html
@@ -3,148 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name | Portfolio</title>
-    <style>
-        /* General Reset */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        /* Body */
-        body {
-            font-family: Arial, sans-serif;
-            color: #333;
-            line-height: 1.6;
-            background-color: #f4f4f4; /* Light gray background color */
-        }
-
-        /* Header */
-        header {
-            background: #333;
-            color: #fff;
-            padding: 1rem 0;
-            text-align: center;
-        }
-
-        nav ul {
-            list-style: none;
-            display: flex;
-            justify-content: center;
-            padding: 0;
-        }
-
-        nav ul li {
-            margin: 0 1rem;
-        }
-
-        nav ul li a {
-            color: #fff;
-            text-decoration: none;
-            padding: 0.5rem 1rem;
-            display: block;
-        }
-
-        nav ul li a:hover {
-            background: #555; /* Darker background on hover */
-        }
-
-        /* Hero Section */
-        .hero {
-            background: #eee;
-            text-align: center;
-            padding: 5rem 1rem;
-        }
-
-        .hero h1 {
-            font-size: 3rem;
-            margin-bottom: 0.5rem;
-        }
-
-        .hero p {
-            font-size: 1.5rem;
-            margin-bottom: 2rem;
-        }
-
-        /* Button Container */
-        .button-container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 1rem;
-        }
-
-        .button {
-            display: inline-block;
-            padding: 1rem 2rem;
-            font-size: 1rem;
-            color: #fff;
-            background: #333;
-            text-decoration: none;
-            border-radius: 5px;
-            transition: background 0.3s ease;
-        }
-
-        .button:hover {
-            background: #555;
-        }
-
-        /* Sections */
-        section {
-            padding: 2rem 1rem;
-            background: #fff; /* White background for sections */
-        }
-
-        section h2 {
-            font-size: 2rem;
-            margin-bottom: 1rem;
-        }
-
-        /* Contact Form */
-        form {
-            max-width: 600px;
-            margin: 0 auto;
-            padding: 1rem;
-            background: #fff; /* White background for the form */
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Light shadow for the form */
-        }
-
-        form label {
-            display: block;
-            margin: 0.5rem 0;
-        }
-
-        form input, form textarea {
-            width: 100%;
-            padding: 0.5rem;
-            margin-bottom: 1rem;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-        }
-
-        form button {
-            background: #333;
-            color: #fff;
-            border: none;
-            padding: 0.5rem 1rem;
-            cursor: pointer;
-            border-radius: 5px;
-        }
-
-        form button:hover {
-            background: #555;
-        }
-
-        /* Footer */
-        footer {
-            background: #333;
-            color: #fff;
-            text-align: center;
-            padding: 1rem 0;
-        }
-    </style>
+    <title>Background Test</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -161,15 +21,6 @@
     <section id="home" class="hero">
         <h1>YADIRTYDOG!</h1>
         <p>How the hell are ya?</p>
-        
-        <div class="button-container">
-            <a href="https://example.com/paperback" class="button">BUY "GOTHIC VIOLENCE" IN PAPERBACK</a>
-            <a href="https://example.com/audiobook" class="button">BUY "GOTHIC VIOLENCE" AS AN AUDIOBOOK</a>
-            <a href="https://example.com/first-book" class="button">PURCHASE THE FIRST MIKE MA BOOK</a>
-            <a href="https://example.com/old-design-portfolio" class="button">OLD DESIGN PORTFOLIO</a>
-            <a href="https://example.com/spotify-playlist" class="button">THE MIKE MA MEGA PLAYLIST ON SPOTIFY</a>
-            <a href="https://example.com/youtube" class="button">YOUTUBE ACCOUNT</a>
-        </div>
     </section>
 
     <section id="about">
