--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </nav>
     </header>
 
-    <section id="home" class="hero">
+    <section id="home">
         <h1>YADIRTYDOG!</h1>
         <p>How the hell are ya?</p>
     </section>
