--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YADIRTYDOG</title>
+    <title>Contact - YADIRTYDOG</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 </head>
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="contact.html">Contact</a></li>
@@ -19,15 +19,16 @@
         </nav>
     </header>
 
-    <section id="home" class="hero">
-        <h1>YADIRTYDOG!</h1>
-        <p>How the hell are ya?</p>
-        <div class="buttons">
-            <a href="https://www.instagram.com/yadirtydog/" target="_blank">INSTAGRAM</a>
-            <a href="https://example.com/audiobook" target="_blank">JOIN THE DISCORD</a>
-            <a href="https://example.com/first-book" target="_blank">BOOKCLUB</a>
-            <a href="https://open.spotify.com/user/mvbpi9begg5jl75tj4i0fupjh?si=9afd81d94b784df9" target="_blank">SPOTIFY</a>
-        </div>
+    <section id="contact">
+        <form action="mailto:yadirtydoug@gmail.com" method="post" enctype="text/plain">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" required>
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+            <label for="message">Message:</label>
+            <textarea id="message" name="message" rows="4" required></textarea>
+            <button type="submit">Send</button>
+        </form>
     </section>
 
     <footer>
