--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YADIRTYDOG</title>
+    <title>Projects | YADIRTYDOG</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 </head>
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="contact.html">Contact</a></li>
@@ -19,15 +19,9 @@
         </nav>
     </header>
 
-    <section id="home" class="hero">
-        <h1>YADIRTYDOG!</h1>
-        <p>How the hell are ya?</p>
-        <div class="buttons">
-            <a href="https://www.instagram.com/yadirtydog/" target="_blank">INSTAGRAM</a>
-            <a href="https://example.com/audiobook" target="_blank">JOIN THE DISCORD</a>
-            <a href="https://example.com/first-book" target="_blank">BOOKCLUB</a>
-            <a href="https://open.spotify.com/user/mvbpi9begg5jl75tj4i0fupjh?si=9afd81d94b784df9" target="_blank">SPOTIFY</a>
-        </div>
+    <section id="projects">
+        <h1>Projects</h1>
+        <p>Showcase your projects or work here. Add descriptions, images, and links as needed.</p>
     </section>
 
     <footer>
