--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YADIRTYDOG</title>
+    <title>YADIRTYDOG!</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 </head>
@@ -21,7 +21,7 @@
 
     <section id="home" class="hero">
         <h1>YADIRTYDOG!</h1>
-        <p>How the hell are ya?</p>
+        <p>Dirty dog, again?</p>
         <div class="buttons">
             <a href="https://www.instagram.com/yadirtydog/" target="_blank">INSTAGRAM</a>
             <a href="https://example.com/audiobook" target="_blank">JOIN THE DISCORD</a>
