--- a/projects.html
+++ b/projects.html
@@ -21,7 +21,7 @@
 
     <section id="projects">
         <h1>Projects</h1>
-        <p>Showcase your projects or work here. Add descriptions, images, and links as needed.</p>
+        <p>Under construction!</p>
     </section>
 
     <footer>
