--- a/about.html
+++ b/about.html
@@ -6,6 +6,77 @@
     <title>About | YADIRTYDOG</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <style>
+        /* General Page Styling */
+        body {
+            background-color: #000; /* Black background */
+            color: #fff; /* White text color for contrast */
+        }
+
+        /* Custom styles for the About section */
+        #about {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: left;
+            flex-wrap: wrap;
+            margin-bottom: 3rem;
+        }
+
+        #about img {
+            margin: 0 auto;
+            max-width: 50%; /* Image width adjustment */
+            height: auto;
+        }
+
+        #about .content {
+            max-width: 40%;
+            margin-right: 2rem;
+        }
+
+        #about h2 {
+            font-size: 2rem;
+            margin-bottom: 1rem;
+        }
+
+        /* What Do I Do Section */
+        #what-do-i-do {
+            padding: 2rem;
+            margin-bottom: 2rem;
+            text-align: left;
+        }
+
+        #what-do-i-do h2 {
+            font-size: 2rem;
+            margin-bottom: 1rem;
+        }
+
+        #what-do-i-do p {
+            font-size: 1.1rem;
+            line-height: 1.5;
+        }
+
+        /* Achievements Section */
+        #achievements {
+            padding: 2rem;
+            text-align: left;
+        }
+
+        #achievements h2 {
+            font-size: 2rem;
+            margin-bottom: 1rem;
+        }
+
+        #achievements ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        #achievements ul li {
+            margin-bottom: 1rem;
+            font-size: 1.1rem;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -20,8 +91,29 @@
     </header>
 
     <section id="about">
-        <h1>About Me</h1>
-        <p>Write a brief introduction about yourself here. Share your background, skills, and interests.</p>
+        <div class="content">
+            <h2>YADIRTYDOG</h2>
+            <p>He's the kind of guy who thinks white space is a waste of, well, space, and Helvetica is for rookies. He’s got a knack for turning a client’s vague idea into something that looks like it was sketched out by a raccoon with a crayon. But, hey, don’t let that fool you. His work? It’s got that... let’s call it “rustic originality.” You know, like if you found a diamond in a dumpster.</p>
+        </div>
+        <img src="images/aboutme.jpeg" alt="About Me Image">
+    </section>
+
+    <!-- What Do I Do Section -->
+    <section id="what-do-i-do">
+        <h2>What Do I Do?</h2>
+        <p>I specialize in turning chaos into creativity. Whether it's a branding project that needs a fresh identity or a website that's craving a unique design, I bring a distinct touch of originality to every task. My approach is hands-on, unorthodox, and always with the client’s vision at the forefront.</p>
+    </section>
+
+    <!-- Achievements Section -->
+    <section id="achievements">
+        <h2>Achievements</h2>
+        <ul>
+            <li>Awarded Best Designer of the Year, 2023</li>
+            <li>Completed over 50 successful projects for international clients</li>
+            <li>Featured in Top Design Magazines and Blogs</li>
+            <li>Hosted a popular design podcast with over 10,000 listeners</li>
+            <li>Speaker at various industry conferences and workshops</li>
+        </ul>
     </section>
 
     <footer>
