--- a/about.html
+++ b/about.html
@@ -108,11 +108,11 @@
     <section id="achievements">
         <h2>Achievements</h2>
         <ul>
-            <li>Awarded Best Designer of the Year, 2023</li>
-            <li>Completed over 50 successful projects for international clients</li>
-            <li>Featured in Top Design Magazines and Blogs</li>
-            <li>Hosted a popular design podcast with over 10,000 listeners</li>
-            <li>Speaker at various industry conferences and workshops</li>
+            <li>Under construction!</li>
+            <li>Under construction!</li>
+            <li>Under construction!</li>
+            <li>Under construction!</li>
+            <li>Under construction!</li>
         </ul>
     </section>
 
