--- a/about.html
+++ b/about.html
@@ -101,7 +101,7 @@
     <!-- What Do I Do Section -->
     <section id="what-do-i-do">
         <h2>What Do I Do?</h2>
-        <p>I specialize in turning chaos into creativity. Whether it's a branding project that needs a fresh identity or a website that's craving a unique design, I bring a distinct touch of originality to every task. My approach is hands-on, unorthodox, and always with the client’s vision at the forefront.</p>
+        <p>Under construction!Under construction!Under construction!Under construction!Under construction!Under construction!Under construction!Under construction!Under construction!Under construction!Under construction!Under construction!.</p>
     </section>
 
     <!-- Achievements Section -->
