--- a/about.html
+++ b/about.html
@@ -11,32 +11,57 @@
         body {
             background-color: #000; /* Black background */
             color: #fff; /* White text color for contrast */
+            font-family: Arial, sans-serif;
+        }
+
+        /* Header Styling */
+        header {
+            text-align: center;
+            margin-bottom: 2rem;
+        }
+
+        header nav ul {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+        }
+
+        header nav ul li {
+            margin: 0 1rem;
+        }
+
+        header nav ul li a {
+            color: #fff;
+            text-decoration: none;
         }
 
         /* Custom styles for the About section */
         #about {
             display: flex;
-            align-items: center;
+            align-items: flex-start;
             justify-content: center;
             text-align: left;
-            flex-wrap: wrap;
+            flex-wrap: nowrap;
             margin-bottom: 3rem;
         }
 
         #about img {
-            margin: 0 auto;
-            max-width: 50%; /* Image width adjustment */
+            max-width: 17%; /* Image width adjustment */
             height: auto;
+            margin-left: 2rem;
         }
 
         #about .content {
-            max-width: 40%;
+            max-width: 20%; /* Reduced text width to fit image */
             margin-right: 2rem;
         }
 
         #about h2 {
             font-size: 2rem;
             margin-bottom: 1rem;
+            margin-left: 0; /* Align h2 with content */
         }
 
         /* What Do I Do Section */
@@ -44,11 +69,13 @@
             padding: 2rem;
             margin-bottom: 2rem;
             text-align: left;
+            margin-left: 216px; /* Indent this section's content */
         }
 
         #what-do-i-do h2 {
             font-size: 2rem;
             margin-bottom: 1rem;
+            margin-left: 0; /* Align h2 with content */
         }
 
         #what-do-i-do p {
@@ -60,11 +87,13 @@
         #achievements {
             padding: 2rem;
             text-align: left;
+            margin-left: 216px; /* Indent this section's content */
         }
 
         #achievements h2 {
             font-size: 2rem;
             margin-bottom: 1rem;
+            margin-left: 0; /* Align h2 with content */
         }
 
         #achievements ul {
@@ -95,13 +124,13 @@
             <h2>YADIRTYDOG</h2>
             <p>He's the kind of guy who thinks white space is a waste of, well, space, and Helvetica is for rookies. He’s got a knack for turning a client’s vague idea into something that looks like it was sketched out by a raccoon with a crayon. But, hey, don’t let that fool you. His work? It’s got that... let’s call it “rustic originality.” You know, like if you found a diamond in a dumpster.</p>
         </div>
-        <img src="images/aboutme.jpeg" alt="About Me Image">
+        <img src="images/about-me.png" alt="About Me Image">
     </section>
 
     <!-- What Do I Do Section -->
     <section id="what-do-i-do">
         <h2>What Do I Do?</h2>
-        <p>Under construction!Under construction!Under construction!Under construction!Under construction!Under construction!Under construction!Under construction!Under construction!Under construction!Under construction!Under construction!.</p>
+        <p>Under construction! Under construction! Under construction! Under construction! Under construction! Under construction! Under construction! Under construction! Under construction! Under construction! Under construction! Under construction!</p>
     </section>
 
     <!-- Achievements Section -->
