--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="about">About</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="projects">Projects</a></li>
+                <li><a href="contact">Contact</a></li>
             </ul>
         </nav>
     </header>
