--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="index">Home</a></li>
+                <li><a href="/">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="contact.html">Contact</a></li>
