--- a/about.html
+++ b/about.html
@@ -111,7 +111,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="index">Home</a></li>
+                <li><a href="/">Home</a></li>
                 <li><a href="about">About</a></li>
                 <li><a href="projects">Projects</a></li>
                 <li><a href="contact">Contact</a></li>
