--- a/projects.html
+++ b/projects.html
@@ -12,9 +12,9 @@
         <nav>
             <ul>
                 <li><a href="/">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="about">About</a></li>
+                <li><a href="projects">Projects</a></li>
+                <li><a href="contact">Contact</a></li>
             </ul>
         </nav>
     </header>
