--- a/about.html
+++ b/about.html
@@ -111,10 +111,10 @@
     <header>
         <nav>
             <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="about">About</a></li>
-                <li><a href="projects">Projects</a></li>
-                <li><a href="contact">Contact</a></li>
+                <li><a href="/">HOME</a></li>
+                <li><a href="about">ABOUT</a></li>
+                <li><a href="work">WORK</a></li>
+                <li><a href="contact">CONTACT</a></li>
             </ul>
         </nav>
     </header>
