--- a/index.html
+++ b/index.html
@@ -8,11 +8,6 @@
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <style>
         /* Splash Screen Styles */
-        body {
-            margin: 0;
-            overflow: hidden;
-        }
-
         #splash-screen {
             position: fixed;
             top: 0;
@@ -24,17 +19,12 @@
             justify-content: center;
             align-items: center;
             z-index: 9999;
-            cursor: pointer; /* Change cursor to pointer to indicate clickable area */
+            cursor: pointer; /* Change cursor to pointer on hover */
         }
 
         #splash-screen img {
-            max-width: 750px; /* Adjust size as needed */
+            max-width: 750px; /* Adjust as needed */
             height: auto;
-        }
-
-        /* Hide content until splash screen disappears */
-        #content {
-            display: none;
         }
     </style>
 </head>
@@ -49,7 +39,7 @@
                 <ul>
                     <li><a href="/">HOME</a></li>
                     <li><a href="about">ABOUT</a></li>
-                    <li><a href="work">WORK</a></li>
+                    <li><a href="projects">PROJECTS</a></li>
                     <li><a href="contact">CONTACT</a></li>
                 </ul>
             </nav>
@@ -72,11 +62,25 @@
     </div>
 
     <script>
-        // Handle splash screen click event
-        document.getElementById('splash-screen').addEventListener('click', function() {
-            this.style.display = 'none';
-            document.getElementById('content').style.display = 'block';
+        window.addEventListener('load', function() {
+            const splashScreen = document.getElementById('splash-screen');
+            const hasVisited = sessionStorage.getItem('hasVisited');
+
+            if (!hasVisited) {
+                // Show splash screen continuously if first visit
+                splashScreen.style.display = 'flex';
+                sessionStorage.setItem('hasVisited', 'true');
+            } else {
+                // Hide splash screen immediately on subsequent visits
+                splashScreen.style.display = 'none';
+            }
+
+            // Hide splash screen on click
+            splashScreen.addEventListener('click', function() {
+                splashScreen.style.display = 'none';
+            });
         });
     </script>
 </body>
 </html>
+
