--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
         <header>
             <nav>
                 <ul>
-                    <li><a href="/">HOME</a></li>
-                    <li><a href="about">ABOUT</a></li>
-                    <li><a href="projects">PROJECTS</a></li>
-                    <li><a href="contact">CONTACT</a></li>
+                    <!-- Removed the Home button -->
+                    <li><a href="about.html">ABOUT</a></li>
+                    <li><a href="projects.html">PROJECTS</a></li>
+                    <li><a href="contact.html">CONTACT</a></li>
                 </ul>
             </nav>
         </header>
@@ -83,4 +83,3 @@
     </script>
 </body>
 </html>
-
