--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <ul>
                     <!-- Removed the Home button -->
                     <li><a href="about.html">ABOUT</a></li>
-                    <li><a href="projects.html">PROJECTS</a></li>
+                    <li><a href="work.html">WORK</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
                 </ul>
             </nav>
